--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-      "node": "8.9.1"
+    "node": "8.9.1"
   },
   "name": "jba-frontend-test",
   "version": "0.1.0",
@@ -17,6 +17,7 @@
     "parcel-bundler": "^1.9.7",
     "pg": "^7.4.3",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.13.1",
     "vue-gallery": "^1.4.0",
     "vue-tiny-slider": "^0.1.27"
   },
