--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vue": "^2.5.17",
     "vue-carousel": "^0.9.0",
     "vue-gallery": "^1.4.0",
-    "vue-tiny-slider": "^0.1.27"
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
